# ogit

./: .gitignore  README.md  pyproject.toml  setup_ogit.sh
src/: __main__.py  git_utils.py  main.py  ollama_client.py
src/ogit/: __main__.py  editor_utils.py  git_utils.py  main.py  ollama_client.py
