[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogit"
version = "0.1.0"
description = "A Git Commit Message Generator using Ollama"
authors = [
    { name = "Yaniv Dan", email = "yanivdezan@gmail.com" }
]
dependencies = [
    "requests",
    "gitpython",
    "pyperclip"
]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
ogit = "ogit.main:cli_entrypoint"
